# trea_kernel

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  ap_boot.asm  boot.asm  build_wsl.sh  cpio_fs.sh  create_disk.sh  linker.ld  rootfs.asm.in  run.sh
.github/workflows/: cmake-single-platform.yml
arch/: CMakeLists.txt
arch/x86/: CMakeLists.txt  apic.cpp  boot.asm  cpu.cpp  gdt.cpp  gdt_load.asm  idt.cpp  interrupt.asm  interrupt.cpp  linker.ld  paging.cpp  paging_asm.asm  pic8259.cpp  pit.cpp  rootfs.asm  segment_fault.cpp  smp.cpp  spinlock.cpp  user_mode_switch.asm  user_mode_switch.cpp
boot/: grub.cfg
data/: rootfs.cpio.newc
drivers/: CMakeLists.txt  block_device.cpp  block_device.h  ext2.cpp  ext2.h  keyboard.cpp
include/arch/x86/: apic.h  gdt.h  idt.h  interrupt.h  interrupt_controller.h  paging.h  percpu.h  pic8259.h  pit.h  spinlock.h
include/drivers/: block_device.h  ext2.h  keyboard.h
include/kernel/: buddy_allocator.h  console_device.h  cpio.h  dirent.h  elf_loader.h  kernel.h  kernel_memory.h  list.h  memfs.h  mutex.h  page.h  process.h  scheduler.h  slab_allocator.h  smp_scheduler.h  syscall.h  syscall_user.h  user_memory.h  vfs.h  virtual_memory_tree.h  zone.h
include/lib/: console.h  debug.h  ioport.h  serial.h  string.h  test_framework.h
kernel/: CMakeLists.txt  buddy_allocator.cpp  buddy_allocator.h  console_device.cpp  elf_loader.cpp  elf_loader.h  elf_loader_reloc.cpp  exit_handler.cpp  kernel.cpp  kernel_memory.cpp  main.cpp  memfs.cpp  memory_operators.cpp  paging.cpp  process.cpp  process.h  process_manager.cpp  process_wrapper.cpp  scheduler.cpp  scheduler.h  syscall.cpp  user_memory.cpp  vfs.cpp  virtual_memory_tree.cpp  zone.cpp
kernel/core/: CMakeLists.txt  kernel.cpp  main.cpp  syscall.cpp
kernel/fs/: CMakeLists.txt  console_device.cpp  memfs.cpp  vfs.cpp
kernel/memory/: buddy_allocator.cpp  kernel_memory.cpp  paging.cpp  slab_allocator.cpp  user_memory.cpp
kernel/process/: elf_loader.cpp  elf_loader_reloc.cpp  exit_handler.cpp  process.cpp  process_manager.cpp  scheduler.cpp
kernel/smp/: CMakeLists.txt  mutex.cpp  smp_scheduler.cpp
lib/: CMakeLists.txt  console.cpp  debug.cpp  debug_test.cpp  log_buffer.cpp  serial.cpp  string.cpp
rootfs/: CMakeLists.txt  commands.cpp  commands.h  init.asm  init.cpp  linker.ld  utils.cpp  utils.h
rootfs/binary/: init
rootfs/cmds/: cat.cpp  cd.cpp  echo.cpp  find.cpp  ls.cpp  rm.cpp  xxd.cpp
tests/: hexdump_test.cpp
